// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de GifApp debe de mostrar una lista de categoria 1`] = `
<Fragment>
  <h2>
     GifApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Blanck Pink"
      key="Blanck Pink"
    />
    <GifGrid
      category="shakira"
      key="shakira"
    />
  </ol>
</Fragment>
`;

exports[`Prueba de GifApp debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
     GifApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
